Fix email notifications

--- a/templates/emails/correction_approved.html
+++ b/templates/emails/correction_approved.html
@@ -34,5 +34,4 @@
     {% endif %}
 </div>
 
-<a href="http://127.0.0.1:8000/employee/attendance/" class="button">View Attendance</a>
-{% endblock %}
+<a href="{{ base_url }}/employee/attendance/" class="button">View Attendance</a>{% endblock %}
