--- a/templates/emails/correction_rejected.html
+++ b/templates/emails/correction_rejected.html
@@ -24,5 +24,4 @@
 
 <p>If you have questions, please contact your HR department.</p>
 
-<a href="http://127.0.0.1:8000/employee/attendance/" class="button">View Attendance</a>
-{% endblock %}
+<a href="{{ base_url }}/employee/attendance/" class="button">View Attendance</a>{% endblock %}
