--- a/templates/emails/leave_approved.html
+++ b/templates/emails/leave_approved.html
@@ -36,5 +36,5 @@
 
 <p>Your leave balance has been updated accordingly.</p>
 
-<a href="http://127.0.0.1:8000/employee/leave/" class="button">View in HRMS</a>
+<a href="{{ base_url }}/employee/leave/" class="button">View in HRMS</a>
 {% endblock %}
