--- a/templates/emails/leave_rejected.html
+++ b/templates/emails/leave_rejected.html
@@ -32,5 +32,4 @@
 
 <p>If you have questions, please contact your HR department.</p>
 
-<a href="http://127.0.0.1:8000/employee/leave/" class="button">View in HRMS</a>
-{% endblock %}
+<a href="{{ base_url }}/employee/leave/" class="button">View in HRMS</a>{% endblock %}
