fixes to forget password and password change

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -51,7 +51,7 @@
             
             <!-- Forgot Password Link -->
             <div class="mt-4">
-                <a href="{% url 'account_reset_password' %}" 
+                <a href="{% url 'custom_password_reset' %}" 
                    class="text-sm text-blue-600 hover:text-blue-800 underline">
                     Forgot password?
                 </a>
