--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Reset Password - Ethos HRMS{% endblock %}
 
@@ -6,7 +7,8 @@
 <div class="min-h-screen flex items-center justify-center bg-gray-100">
     <div class="max-w-md w-full mx-4">
         <div class="text-center mb-8">
-            <h1 class="text-3xl font-bold text-gray-800">Ethos HRMS</h1>
+            <img src="{% static 'images/Ethos_logo.jpeg' %}" alt="Ethos" class="h-24 w-24 mx-auto mb-2 rounded-full">
+            <h1 class="text-xl font-bold text-gray-800">Ethos HRMS</h1>
             <p class="text-gray-600">Reset your password</p>
         </div>
         
